@@ -3461,12 +3461,12 @@ int CUtil::ExecBuiltIn(const CStdString& execString)
     g_network.NetworkMessage(CNetwork::SERVICES_DOWN,1);
     g_network.Deinitialize();
     g_settings.LoadProfile(0); // login screen always runs as default user
+    m_gWindowManager.ActivateWindow(WINDOW_LOGIN_SCREEN);
     g_network.Initialize(g_guiSettings.GetInt("network.assignment"),
       g_guiSettings.GetString("network.ipaddress").c_str(),
       g_guiSettings.GetString("network.subnet").c_str(),
       g_guiSettings.GetString("network.gateway").c_str(),
       g_guiSettings.GetString("network.dns").c_str());
-    m_gWindowManager.ActivateWindow(WINDOW_LOGIN_SCREEN);
   }
   else
     return -1;
